# LLM-from-scratch

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml  medium.yaml
scripts/: analyze_results.py  hyperparameter_search.sh  monitor_search.sh  run.sh
src/: config.py  get_model_info.py  inference.py  tokenize_dataset.py  train.py  train_tokenizer.py
src/alignment/: batch_inference.py  grpo_utils.py  math_sft.py  sft_utils.py  utils.py
src/data_loading/: README.md  __init__.py  data_loading.py
src/distributed/: README.md  __init__.py  benchmark.py  ddp.py
src/kernels/: __init__.py  benchmark.py  flash_attention.py
src/model/: README.md  __init__.py  models.py
src/optimizers/: README.md  __init__.py  optimizers.py
src/profiling/: README.md  __init__.py  benchmark.py
src/schedulers/: README.md  __init__.py  gradient_accumulation_schedulers.py  schedulers.py  utils.py
src/tokenizer/: README.md  __init__.py  bpe.py  tokenizer.py  tokenizer_utils.py
src/utils/: __init__.py  checkpointing.py  generate_text.py  gradient_clipping.py  loss.py  utils.py
