[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]
